Update 'backend-tests-go-ynqqbgqu' component image to: quay.io/rhtap_qe/backend-tests-go-ynqqbgqu:6079aaea7a02ca702678ec3764c53833dfa045a6@sha256:0e5bbc9854a74f8ee3e8e97447ba831a575a406609d890dd4a580a15ae7c831b

--- a/components/backend-tests-go-ynqqbgqu/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-ynqqbgqu/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-ynqqbgqu
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-ynqqbgqu:6079aaea7a02ca702678ec3764c53833dfa045a6@sha256:0e5bbc9854a74f8ee3e8e97447ba831a575a406609d890dd4a580a15ae7c831b
+          name: container-image
